# wine-quality-explanatory-model

./: README.md  pyproject.toml  utilities.py  wine_explanatory_model.ipynb
