[tool.poetry]
name = "wine-quality-explanatory-model"
version = "0.1.0"
description = ""
authors = ["Erikas Leonenka <e.leonenka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
scipy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
